tests/paczka1/small_fuzzy/78621979.err
Error in line 1: OdBgKhKjo A404 43,0
Error in line 7: Gq5 A404 25,5
